--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -13,8 +13,13 @@ jobs:
       - uses: actions/checkout@v2
       - uses: s-weigand/setup-conda@v1
       - name: Start docker compose
-        run: docker-compose up
+        run: docker-compose up &
+      - name: sleep
+        run: sleep 60
       - uses: fjogeleit/http-request-action@master
+        id: test_OCR 
         with:
           url: 'http://localhost:5000/test'
           method: 'GET'
+      - name: response
+        run: echo ${{ steps.test_OCR.outputs.response }}
